# sedona-examples

./: .gitignore  README.md  hello.py  pyproject.toml
data/: custom-pedia-cities-nyc-Mar2018.parquet  ne_cities.py  ne_countries.parquet  ne_countries.py  singleline_geojson.json
data/many_geojsons/: file1.json  file2.json
notebooks/: custom-crs.ipynb  find-fun-city.ipynb  giso.ipynb  lonboard1.ipynb  lonboard2.ipynb  lonboard3.ipynb  nyc-building-overture.ipynb  nyc_swimming_pools.ipynb  python-sql-apis.ipynb  sedonadb-read-delta.ipynb  sedonadb_vs_geopandas.ipynb  sedonaspark_to_sedonadb.ipynb  simple-example.ipynb  spatial-join.ipynb
sedona-examples/: us_buildings.py  us_buildings_setup.py
tests/: sedona.py  test_benchmarks.py  test_centroids.py  test_constructors.py  test_demos.py  test_distance.py  test_functions.py  test_h3.py  test_io_csv.py  test_io_geopackage.py  test_io_shapefiles.py  test_joins.py  test_optimize_geoparquet.py  test_parquet.py  test_predicates.py  test_raster.py  test_readers.py  test_run_file.py  test_writers.py  test_writers_csv.py
