[project]
name = "sedona-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-sedona>=1.7.0",
    "chispa>=0.10.1",
    "pandas>=2.2.3",
    "pyspark>=3.5.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]
