[project]
name = "sedona-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-sedona[db]==1.8.0",
    "pyspark==3.5.7",
    "pandas",
    "geopandas",
    "jupyter",
    "lonboard"
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
]
